--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -4,5 +4,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #edf3f6;
+    background-color: #edf3f6;  
+}
+
+ h3{ 
+    text-align: center;
 }
